feat: revisar solicitud (B20)
